--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Node.js & PostgreSQL",
-    "dockerComposeFile": "doker-compose.yml",
+    "dockerComposeFile": ["doker-compose.yml"],
     "postCreateCommand": "npm install",
     "forwardPorts": [3000],
     "appPort": ["3000:3000"]
