--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: julianschooltime
-      POSTGRES_PASSWORD: Pas$1234!
-      POSTGRES_DB: todo
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
   app:
-    build:
+    build: 
       context: .
       dockerfile: Dockerfile
-    depends_on:
-      - db
-    env_file:
-      - .env
-    ports:
-      - "3000:3000"
+      
+    # Overrides default command so things don't shut down after the process ends.
+    command: sleep infinity
+
+    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
+    network_mode: service:db
+
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
+
+  db:
+    image: postgres:latest
+    restart: unless-stopped
     volumes:
-      - .:/usr/src/app
-    command: npm start
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+
+    # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
 
 volumes:
-  postgres_data:
+  postgres-data:
